src/test/fail/excep_in_anonymous.ly
<@lily 
function f() {
    any a = 10
    string s = o.@(string)
}

list[function()] function_list = [m, m, m]
function_list[0]()
@>
